--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
 
 :root {
     --laranja-claro: #FF862A;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
 }
 
 body {
@@ -61,9 +64,7 @@ section {
     border-radius: 30px;
     border: none;
     width: 14em;
-    /* Convertido para em aumenta o tamanho da fonte por tabela*/
     height: 3em;
-    /* Convertido para em */
     align-content: center;
 
 }
@@ -136,7 +137,358 @@ h2 {
     font-weight: bold;
 }
 
+.form-control {
+    background-color: #F1EDEF;@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+    
+    :root {
+        --laranja-claro: #FF862A;
+    }
+    
+    body {
+        font-size: 1rem;
+        font-family: 'Montserrat';
+    }
+    
+    header {
+        background-color: #ffffff;
+    }
+    
+    
+    section {
+        padding-bottom: 5rem;
+    }
+    
+    
+    .nav-link {
+        color: #CB6D43;
+        font-weight: 600;
+    }
+    
+    .inicio-fundo {
+        /* aula 3 */
+        background-image: url('img/49…mulario {
+        background-color: #ffffff;
+        padding: 2rem;
+        /* Espaçamento interno dentro do formulário */
+        border-radius: 10px;
+        /* Borda arredondada para o formulário */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+        
+        :root {
+            --laranja-claro: #FF862A;
+        }
+        
+        body {
+            font-size: 1rem;
+            font-family: 'Montserrat';
+        }
+        
+        header {
+            background-color: #ffffff;
+        }
+        
+        
+        section {
+            padding-bottom: 5rem;
+        }
+        
+        
+        .nav-link {
+            color: #CB6D43;
+            font-weight: 600;
+        }
+        
+        .inicio-fundo {
+            /* aula 3 */
+            background-image: url('img/49…mulario {
+            background-color: #ffffff;
+            padding: 2rem;
+            /* Espaçamento interno dentro do formulário */
+            border-radius: 10px;
+            /* Borda arredondada para o formulário */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* Sombra suave para destacar o formulário */
+            font-weight: bold;
+        }
+        
+        .formulario button {
+            background-color: #CB6D43;
+            border: none;
+            font-weight: bold;
+        }
+        
+        /* chama classe do bootstrap para modificar a cor */
+        .form-control {
+            background-color: #F1EDEF;
+        }
+        /* Sombra suave para destacar o formulário */
+        font-weight: bold;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+
+:root {
+    --laranja-claro: #FF862A;
+}
+
+body {
+    font-size: 1rem;
+    font-family: 'Montserrat';
+}
+
+header {
+    background-color: #ffffff;
+}
+
+
+section {
+    padding-bottom: 5rem;
+}
+
+
+.nav-link {
+    color: #CB6D43;
+    font-weight: 600;
+}
+
+.inicio-fundo {
+    /* aula 3 */
+    background-image: url('img/49…mulario {
+    background-color: #ffffff;
+    padding: 2rem;
+    /* Espaçamento interno dentro do formulário */
+    border-radius: 10px;
+    /* Borda arredondada para o formulário */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Sombra suave para destacar o formulário */
+    font-weight: bold;
+}@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+
+:root {
+    --laranja-claro: #FF862A;
+}
+
+body {
+    font-size: 1rem;
+    font-family: 'Montserrat';
+}
+
+header {
+    background-color: #ffffff;
+}
+
+
+section {
+    padding-bottom: 5rem;
+}
+
+
+.nav-link {
+    color: #CB6D43;
+    font-weight: 600;@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+    
+    :root {
+        --laranja-claro: #FF862A;
+    }
+    
+    body {
+        font-size: 1rem;
+        font-family: 'Montserrat';
+    }
+    
+    header {
+        background-color: #ffffff;
+    }
+    
+    
+    section {
+        padding-bottom: 5rem;
+    }
+    
+    
+    .nav-link {
+        color: #CB6D43;
+        font-weight: 600;
+    }
+    
+    .inicio-fundo {
+        /* aula 3 */
+        background-image: url('img/49…mulario {
+        background-color: #ffffff;
+        padding: 2rem;
+        /* Espaçamento interno dentro do formulário */
+        border-radius: 10px;
+        /* Borda arredondada para o formulário */
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
+        
+        :root {
+            --laranja-claro: #FF862A;
+        }
+        
+        body {
+            font-size: 1rem;
+            font-family: 'Montserrat';
+        }
+        
+        header {
+            background-color: #ffffff;
+        }
+        
+        
+        section {
+            padding-bottom: 5rem;
+        }
+        
+        
+        .nav-link {
+            color: #CB6D43;
+            font-weight: 600;
+        }
+        
+        .inicio-fundo {
+            /* aula 3 */
+            background-image: url('img/49…mulario {
+            background-color: #ffffff;
+            padding: 2rem;
+            /* Espaçamento interno dentro do formulário */
+            border-radius: 10px;
+            /* Borda arredondada para o formulário */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            /* Sombra suave para destacar o formulário */
+            font-weight: bold;
+        }
+        
+        .formulario button {
+            background-color: #CB6D43;
+            border: none;
+            font-weight: bold;
+        }
+        
+        /* chama classe do bootstrap para modificar a cor */
+        .form-control {
+            background-color: #F1EDEF;
+        }
+        /* Sombra suave para destacar o formulário */
+        font-weight: bold;
+    }
+    
+    .formulario button {
+        background-color: #CB6D43;
+        border: none;
+        font-weight: bold;
+    }
+    
+    /* chama classe do bootstrap para modificar a cor */
+    .form-control {
+        background-color: #F1EDEF;
+    }
+}
+
+.inicio-fundo {
+    /* aula 3 */
+    background-image: url('img/49…mulario {
+    background-color: #ffffff;
+    padding: 2rem;
+    /* Espaçamento interno dentro do formulário */
+    border-radius: 10px;
+    /* Borda arredondada para o formulário */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Sombra suave para destacar o formulário */
+    font-weight: bold;
+}
+
+.formulario button {
+    background-color: #CB6D43;
+    border: none;
+    font-weight: bold;
+}
+
 /* chama classe do bootstrap para modificar a cor */
 .form-control {
     background-color: #F1EDEF;
+}
+
+.formulario button {
+    background-color: #CB6D43;
+    border: none;
+    font-weight: bold;
+}
+
+/* chama classe do bootstrap para modificar a cor */
+.form-control {
+    background-color: #F1EDEF;
+}
+    .formulario button {
+        background-color: #CB6D43;
+        border: none;
+        font-weight: bold;
+    }
+    
+    /* chama classe do bootstrap para modificar a cor */
+    .form-control {
+        background-color: #F1EDEF;
+    }
+}
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+}
+
+.rotacao-botao{
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}
+
+.opcoes-acessibilidade{
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
+.apresenta-lista{
+    display: none;
+}
+
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto-contraste header,
+.alto-contraste footer,
+.alto-contraste .formulario{
+    background-color: var(--alto-contraste-fundo);
+    color: var(--alto-contraste-texto);
+}
+
+.alto-contraste .nav-link{
+    color: var(--alto-contraste-link);
+}
+
+.alto-contraste .botao-inicio,
+.alto-contraste .formulario button,
+.alto-contraste .btn-primary{
+    background-color: var(--alto-contraste-link);
+    color: var(--alto-contraste-fundo)
+}
+
+.alto-contraste #tropicalia {
+    background: none;
+}
+
+.alto-contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
+}
+.alto-contraste .fundo-galeria {
+    background: none;
 }
