--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ h2 {
     
     .inicio-fundo {
         /* aula 3 */
-        background-image: url('img/49…mulario {
+        background-image: url('img/49…mulario )
         background-color: #ffffff;
         padding: 2rem;
         /* Espaçamento interno dentro do formulário */
@@ -317,7 +317,7 @@ section {
     
     .inicio-fundo {
         /* aula 3 */
-        background-image: url('img/49…mulario {
+        background-image: url('img/49…mulario)
         background-color: #ffffff;
         padding: 2rem;
         /* Espaçamento interno dentro do formulário */
@@ -352,7 +352,7 @@ section {
         
         .inicio-fundo {
             /* aula 3 */
-            background-image: url('img/49…mulario {
+            background-image: url('img/49…mulario)
             background-color: #ffffff;
             padding: 2rem;
             /* Espaçamento interno dentro do formulário */
@@ -391,7 +391,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/49…mulario {
+    background-image: url('img/49…mulario )
     background-color: #ffffff;
     padding: 2rem;
     /* Espaçamento interno dentro do formulário */
